# MORCS

./: .gitignore  .gitmodules  README.md  base.py  crs.py  mnvruncontrol  morcs.toml  pyproject.toml  test_mnv.py
morcs/: lrs.py
src/: mnvruncontrol
src/morcs/: base.py  cli.py  controller.py  crs.py  db.py  util.py
src/morcs/subsystems/: crs.py  lrs.py  minerva.py
